add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>welcome to my playground</title>
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">
   <script type="text/javascript">
    var _gaq = _gaq || [];
@@ -20,3 +21,4 @@
 
 </body>
 </html>
+
